--- a/HTML/Character.html
+++ b/HTML/Character.html
@@ -36,38 +36,38 @@
     </header>
     <div class="main">
         <div class="bg_player">
-            <h2><img src="../Image/icon_traverconstellation.png" height="40px">플레이어<img src="../Image/icon_traverconstellation.png" height="40px"></h2>
+            <h2><img src="../Image/icon_traverconstellation.png" height="40px">이세계(플레이어)<img src="../Image/icon_traverconstellation.png" height="40px"></h2>
             <div class="character_icon">
                 <div></div>
                 <div></div>
                 <div></div>
                 <div></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_traver.png"><p>남행자</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_traver1.png"><p>여행자</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%97%AC%ED%96%89%EC%9E%90(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_traver.png"><p>아이테르</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%97%AC%ED%96%89%EC%9E%90(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_traver1.png"><p>루미네</p></a></div>
             </div>
         </div>
         <div class="bg_md">
             <h2><img src="../Image/icon_MD.png" height="40px">몬드<img src="../Image/icon_MD.png" height="40px"></h2>
             <div class="character_icon">
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_amber.png"><p>엠버</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_kaeya.png"><p>케이야</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_lisa.png"><p>리사</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_noelle.png"><p>노엘</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_sucrose.png"><p>설탕</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_jean.png"><p>진</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_klee.png"><p>클레</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_albedo.png"><p>알베도</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_eula.png"><p>유라</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_babara.png"><p>바바라</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%97%A0%EB%B2%84(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_amber.png"><p>엠버</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%BC%80%EC%9D%B4%EC%95%84"><img class="c_icon" src="../Image/icon_kaeya.png"><p>케이야</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EB%A6%AC%EC%82%AC(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_lisa.png"><p>리사</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EB%85%B8%EC%97%98(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_noelle.png"><p>노엘</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%84%A4%ED%83%95(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_sucrose.png"><p>설탕</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%A7%84(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_jean.png"><p>진</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%ED%81%B4%EB%A0%88"><img class="c_icon" src="../Image/icon_klee.png"><p>클레</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%95%8C%EB%B2%A0%EB%8F%84(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_albedo.png"><p>알베도</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9C%A0%EB%9D%BC(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_eula.png"><p>유라</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EB%B0%94%EB%B0%94%EB%9D%BC(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_babara.png"><p>바바라</p></a></div>
                 <div></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_rosaria.png"><p>로자리아</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_fischl.png"><p>피슬</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_bennett.png"><p>베넷</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_mona.png"><p>모나</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_venti.png"><p>벤티</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_razor.png"><p>레이저</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_diluc.png"><p>다이루크</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_diona.png"><p>디오나</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EB%A1%9C%EC%9E%90%EB%A6%AC%EC%95%84(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_rosaria.png"><p>로자리아</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%ED%94%BC%EC%8A%AC"><img class="c_icon" src="../Image/icon_fischl.png"><p>피슬</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EB%B2%A0%EB%84%B7"><img class="c_icon" src="../Image/icon_bennett.png"><p>베넷</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EB%AA%A8%EB%82%98(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_mona.png"><p>모나</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EB%B2%A4%ED%8B%B0"><img class="c_icon" src="../Image/icon_venti.png"><p>벤티</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EB%A0%88%EC%9D%B4%EC%A0%80(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_razor.png"><p>레이저</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EB%8B%A4%EC%9D%B4%EB%A3%A8%ED%81%AC"><img class="c_icon" src="../Image/icon_diluc.png"><p>다이루크</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EB%94%94%EC%98%A4%EB%82%98(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_diona.png"><p>디오나</p></a></div>
             </div>
         </div>
         <div class="bg_ly">
