--- a/HTML/Character.html
+++ b/HTML/Character.html
@@ -19,7 +19,7 @@
                 <ul class="sub_menu">
                     <li><a href="../HTML/Character.html">캐릭터</a></li>
                     <li><a href="../HTML/Weapon.html">장비</a></li>
-                    <li><a href="../HTML/Character.html">성유물</a></li>
+                    <li><a href="../HTML/Artifacts.html">성유물</a></li>
                 </ul>
             </li>
             <li class="menu_d">
@@ -34,7 +34,7 @@
             </li>
         </ul>
     </header>
-    <div class="main">
+    <section class="main">
         <div class="bg_player">
             <h2><img src="../Image/icon_traverconstellation.png" height="40px">이세계(플레이어)<img src="../Image/icon_traverconstellation.png" height="40px"></h2>
             <div class="character_icon">
@@ -106,6 +106,6 @@
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_kokomi.png"><p>코코미</p></a></div>
             </div>
         </div>
-    </div>
+    </section>
 </body>
 </html>
