--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -19,7 +19,7 @@
                 <ul class="sub_menu">
                     <li><a href="../HTML/Character.html">캐릭터</a></li>
                     <li><a href="../HTML/Character.html">장비</a></li>
-                    <li><a href="../HTML/Character.html">성유물</a></li>
+                    <li><a href="../HTML/Artifacts.html">성유물</a></li>
                 </ul>
             </li>
             <li class="menu_d">
@@ -40,6 +40,6 @@
             <p>원신은 7가지 원소들의 상호작용을 이용한 미호요의 3D 오픈월드 액션 RPG 게임입니다</p>
             <p></p>
         </div>
-    </section>>
+    </section>
 </body>
 </html>
