--- a/HTML/Weapon.html
+++ b/HTML/Weapon.html
@@ -19,7 +19,7 @@
                 <ul class="sub_menu">
                     <li><a href="../HTML/Character.html">캐릭터</a></li>
                     <li><a href="../HTML/Weapon.html">장비</a></li>
-                    <li><a href="../HTML/Character.html">성유물</a></li>
+                    <li><a href="../HTML/Artifacts.html">성유물</a></li>
                 </ul>
             </li>
             <li class="menu_d">
@@ -84,6 +84,6 @@
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Everlasting Moonglow.png"><p>불멸의 달빛</p></a></div>
             </div>
         </div>
-    </section>>
+    </section>
 </body>
 </html>
