--- a/HTML/Artifacts.html
+++ b/HTML/Artifacts.html
@@ -25,7 +25,6 @@
             <li class="menu_d">
                 <div class="main_menu menu4"><a href="../HTML/Information.html" >자료실</a></div>
                 <ul class="sub_menu">
-                    <li><a href="../HTML/Information.html" >지역</a></li>
                     <li><a href="../HTML/Information.html" >스토리</a></li>
                 </ul>
             </li>
@@ -35,25 +34,26 @@
         </ul>
     </header>
     <section class="main weapon_main">
-        <div class="weapon_icon type6">
-            <div class="namecard"><a href="https://namu.wiki/w/%EC%97%A0%EB%B2%84(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/Gladiator's Finale.png"><p>검투사의 피날레</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%EC%BC%80%EC%9D%B4%EC%95%84"><img class="c_icon" src="../Image/Wanderer's Troupe.png"><p>대지를 유랑하는 악단</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%EB%A6%AC%EC%82%AC(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/Thundering Fury.png"><p>번개같은 분노</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%EB%85%B8%EC%97%98(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/Thundersoother.png"><p>뇌명을 평정한 존자</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%EC%84%A4%ED%83%95(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/Viridescent Venerer.png"><p>청록색 그림자</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%EC%A7%84(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/Maiden Beloved.png"><p>사랑받는 소녀</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%ED%81%B4%EB%A0%88"><img class="c_icon" src="../Image/Archaic Petra.png"><p>유구한 반암</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%EC%95%8C%EB%B2%A0%EB%8F%84(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/Retracing Bolide.png"><p>날아오르는 유성</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%EC%9C%A0%EB%9D%BC(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/Crimson Witch of Flames.png"><p>불타오르는 화염의 마녀</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%EB%B0%94%EB%B0%94%EB%9D%BC(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/Lavawalker.png"><p>불위를 걷는 현인</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%EB%B0%94%EB%B0%94%EB%9D%BC(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/Bloodstained Chivalry.png"><p>피에 물든 기사도</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%EB%A1%9C%EC%9E%90%EB%A6%AC%EC%95%84(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/Noblesse Oblige.png"><p>옛 왕실의 의식</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%ED%94%BC%EC%8A%AC"><img class="c_icon" src="../Image/Blizzard Strayer.png"><p>얼음바람 속에서 길잃은 용사</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%EB%B2%A0%EB%84%B7"><img class="c_icon" src="../Image/Heart of Depth.png"><p>몰락한 마음</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%EB%AA%A8%EB%82%98(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/Tenacity of the Millelith.png"><p>견고한 천암</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%EB%B2%A4%ED%8B%B0"><img class="c_icon" src="../Image/Pale Flame.png"><p>창백의 화염</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%EB%A0%88%EC%9D%B4%EC%A0%80(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/Shimenawa's Reminiscence.png"><p>추억의 시메카자리</p></a></div>
-            <div class="namecard"><a href="https://namu.wiki/w/%EB%8B%A4%EC%9D%B4%EB%A3%A8%ED%81%AC"><img class="c_icon" src="../Image/Emblem of Severed Fate.png"><p>절연의 기치</p></a></div>
+        <div class="artifact_icon">
+            <div class="namecard"><a href="https://namu.wiki/w/%EC%97%A0%EB%B2%84(%EC%9B%90%EC%8B%A0)"><img class="a_icon" src="../Image/Gladiator's Finale.png"><p>검투사의 피날레</p></a></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%EC%BC%80%EC%9D%B4%EC%95%84"><img class="a_icon" src="../Image/Wanderer's Troupe.png"><p>대지를 유랑하는 악단</p></a></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%EB%A6%AC%EC%82%AC(%EC%9B%90%EC%8B%A0)"><img class="a_icon" src="../Image/Thundering Fury.png"><p>번개같은 분노</p></a></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%EB%85%B8%EC%97%98(%EC%9B%90%EC%8B%A0)"><img class="a_icon" src="../Image/Thundersoother.png"><p>뇌명을 평정한 존자</p></a></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%EC%84%A4%ED%83%95(%EC%9B%90%EC%8B%A0)"><img class="a_icon" src="../Image/Viridescent Venerer.png"><p>청록색 그림자</p></a></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%EC%A7%84(%EC%9B%90%EC%8B%A0)"><img class="a_icon" src="../Image/Maiden Beloved.png"><p>사랑받는 소녀</p></a></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%ED%81%B4%EB%A0%88"><img class="a_icon" src="../Image/Archaic Petra.png"><p>유구한 반암</p></a></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%EC%95%8C%EB%B2%A0%EB%8F%84(%EC%9B%90%EC%8B%A0)"><img class="a_icon" src="../Image/Retracing Bolide.png"><p>날아오르는 유성</p></a></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%EC%9C%A0%EB%9D%BC(%EC%9B%90%EC%8B%A0)"><img class="a_icon" src="../Image/Crimson Witch of Flames.png"><p>불타오르는 화염의 마녀</p></a></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%EB%B0%94%EB%B0%94%EB%9D%BC(%EC%9B%90%EC%8B%A0)"><img class="a_icon" src="../Image/Lavawalker.png"><p>불위를 걷는 현인</p></a></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%EB%B0%94%EB%B0%94%EB%9D%BC(%EC%9B%90%EC%8B%A0)"><img class="a_icon" src="../Image/Bloodstained Chivalry.png"><p>피에 물든 기사도</p></a></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%EB%A1%9C%EC%9E%90%EB%A6%AC%EC%95%84(%EC%9B%90%EC%8B%A0)"><img class="a_icon" src="../Image/Noblesse Oblige.png"><p>옛 왕실의 의식</p></a></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%ED%94%BC%EC%8A%AC"><img class="a_icon" src="../Image/Blizzard Strayer.png"><p>얼음바람 속에서 길잃은 용사</p></a></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%EB%B2%A0%EB%84%B7"><img class="a_icon" src="../Image/Heart of Depth.png"><p>몰락한 마음</p></a></div>    
+            <div class="namecard"><a href="https://namu.wiki/w/%EB%AA%A8%EB%82%98(%EC%9B%90%EC%8B%A0)"><img class="a_icon" src="../Image/Tenacity of the Millelith.png"><p>견고한 천암</p></a></div>
+            <div></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%EB%B2%A4%ED%8B%B0"><img class="a_icon" src="../Image/Pale Flame.png"><p>창백의 화염</p></a></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%EB%A0%88%EC%9D%B4%EC%A0%80(%EC%9B%90%EC%8B%A0)"><img class="a_icon" src="../Image/Shimenawa's Reminiscence.png"><p>추억의 시메카자리</p></a></div>
+            <div class="namecard"><a href="https://namu.wiki/w/%EB%8B%A4%EC%9D%B4%EB%A3%A8%ED%81%AC"><img class="a_icon" src="../Image/Emblem of Severed Fate.png"><p>절연의 기치</p></a></div>
         </div>
     </section>
 </body>
