character ui fix&update

--- a/HTML/Character.html
+++ b/HTML/Character.html
@@ -34,9 +34,9 @@
         </ul>
     </header>
     <section class="main">
-        <div class="bg_player">
+        <div class="bg">
             <h2><img src="../Image/icon_traverconstellation.png" height="40px">이세계(플레이어)<img src="../Image/icon_traverconstellation.png" height="40px"></h2>
-            <div class="character_icon">
+            <div class="item_character bg_PY">
                 <div></div>
                 <div></div>
                 <div></div>
@@ -45,9 +45,9 @@
                 <div class="namecard"><a href="https://namu.wiki/w/%EC%97%AC%ED%96%89%EC%9E%90(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_traver1.png"><p>루미네</p></a></div>
             </div>
         </div>
-        <div class="bg_md">
+        <div class="bg">
             <h2><img src="../Image/icon_MD.png" height="40px">몬드<img src="../Image/icon_MD.png" height="40px"></h2>
-            <div class="character_icon">
+            <div class="item_character bg_MD">
                 <div class="namecard"><a href="https://namu.wiki/w/%EC%97%A0%EB%B2%84(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_amber.png"><p>엠버</p></a></div>
                 <div class="namecard"><a href="https://namu.wiki/w/%EC%BC%80%EC%9D%B4%EC%95%84"><img class="c_icon" src="../Image/icon_kaeya.png"><p>케이야</p></a></div>
                 <div class="namecard"><a href="https://namu.wiki/w/%EB%A6%AC%EC%82%AC(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_lisa.png"><p>리사</p></a></div>
@@ -69,9 +69,9 @@
                 <div class="namecard"><a href="https://namu.wiki/w/%EB%94%94%EC%98%A4%EB%82%98(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_diona.png"><p>디오나</p></a></div>
             </div>
         </div>
-        <div class="bg_ly">
+        <div class="bg">
             <h2><img src="../Image/icon_LY.png" height="40px">리월<img src="../Image/icon_LY.png" height="40px"></h2>
-            <div class="character_icon">
+            <div class="item_character bg_LY">
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_chongyun.png"><p>중운</p></a></div>
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_zhongli.png"><p>종려</p></a></div>
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_xinyan.png"><p>신염</p></a></div>
@@ -91,9 +91,9 @@
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_tartaglia.png"><p>타르탈리아</p></a></div>
             </div>
         </div>
-        <div class="bg_iz">
+        <div class="bg">
             <h2><img src="../Image/icon_IZ.png" height="40px">이나즈마<img src="../Image/icon_IZ.png" height="40px"></h2>
-            <div class="character_icon">
+            <div class="item_character bg_IZ">
                 <div></div>
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_kazuha.png"><p>카즈하</p></a></div>
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_ayaka.png"><p>아야카</p></a></div>
