캐릭터 페이지 레이아웃 및 폰트 크기 부분조정

--- a/HTML/Character.html
+++ b/HTML/Character.html
@@ -91,7 +91,7 @@
                 <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_tartaglia.png"><p>타르탈리아</p></a></div>
             </div>
         </div>
-        <div class="bg">
+        <div class="bg" style="padding-bottom: 3%;">
             <h2><img src="../Image/icon_IZ.png" height="40px">이나즈마<img src="../Image/icon_IZ.png" height="40px"></h2>
             <div class="item_character bg_IZ">
                 <div></div>
