--- a/HTML/Weapon.html
+++ b/HTML/Weapon.html
@@ -34,9 +34,9 @@
         </ul>
     </header>
     <section class="main weapon_main">
-        <div class=" ">
+        <div class="bg">
             <h2>한손검(★5)</h2>
-            <div class="weapon_icon type6">
+            <div class="item_weapon type6" style="background-image: url(../Image/원신\ 등장인물\ -\ 진\ 군힐드\ \(Jean\ Gunnhildr\).png);">
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Aquila Favonia.png"><p>매의 검</p></a></div>
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Skyward Blade.png"><p>천공의 검</p></a></div>
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Summit Shaper.png"><p>참봉의 칼날</p></a></div>
@@ -45,18 +45,18 @@
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Mistsplitter Reforged.png"><p>안개를 가르는 회광</p></a></div>
             </div>
         </div>
-        <div class="">
+        <div class="bg">
             <h2>양손검(★5)</h2>
-            <div class="weapon_icon type4">
+            <div class="item_weapon type4">
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Skyward Pride.png"><p>천공의 긍지</p></a></div>
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Wolf's Gravestone.png"><p>늑대의 말로</p></a></div>
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/The Unforged.png"><p>무공의 검</p></a></div>
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Song of Broken Pines.png"><p>송뢰가 울릴 무렵</p></a></div>
             </div>
         </div>
-        <div class="">
+        <div class="bg">
             <h2>장병기(★5)</h2>
-            <div class="weapon_icon type5">
+            <div class="item_weapon type5">
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Primordial Jade Winged-Spear.png"><p>화박연</p></a></div>
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Skyward Spine.png"><p>천공의 마루</p></a></div>
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Vortex Vanquisher.png"><p>관홍의 창</p></a></div>
@@ -64,9 +64,9 @@
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Engulfing Lightning.png"><p>예초의 번개</p></a></div>
             </div>
         </div>
-        <div class="">
+        <div class="bg">
             <h2>활(★5)</h2>
-            <div class="weapon_icon type5">
+            <div class="item_weapon type5">
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Skyward Harp.png"><p>천공의 날개</p></a></div>
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Amos' Bow.png"><p>아모스의 활</p></a></div>
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Elegy for the End.png"><p>종말 탄식의 노래</p></a></div>
@@ -74,9 +74,9 @@
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Brumal Star.png"><p>극지의 별</p></a></div>
             </div>
         </div>
-        <div class=" ">
+        <div class="bg" style="padding-bottom: 3%;">
             <h2>법구(★5)</h2>
-            <div class="weapon_icon type4">
+            <div class="item_weapon type4">
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Skyward Atlas.png"><p>천공의 두루마리</p></a></div>
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Lost Prayer to the Sacred Winds.png"><p>사풍 원서</p></a></div>
                 <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Memory of Dust.png"><p>속세의 자물쇠</p></a></div>
