--- a/HTML/Character.html
+++ b/HTML/Character.html
@@ -72,37 +72,37 @@
         <div class="bg">
             <h2><img src="../Image/icon_LY.png" height="40px">리월<img src="../Image/icon_LY.png" height="40px"></h2>
             <div class="item_character bg_LY">
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_chongyun.png"><p>중운</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_zhongli.png"><p>종려</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_xinyan.png"><p>신염</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_yanfei.png"><p>연비</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_ningguang.png"><p>응광</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_keqing.png"><p>각청</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_xiangling.png"><p>향릉</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_beidou.png"><p>북두</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_xingqiu.png"><p>행추</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_qiqi.png"><p>치치</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%A4%91%EC%9A%B4"><img class="c_icon" src="../Image/icon_chongyun.png"><p>중운</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%A2%85%EB%A0%A4(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_zhongli.png"><p>종려</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%8B%A0%EC%97%BC"><img class="c_icon" src="../Image/icon_xinyan.png"><p>신염</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%97%B0%EB%B9%84(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_yanfei.png"><p>연비</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9D%91%EA%B4%91"><img class="c_icon" src="../Image/icon_ningguang.png"><p>응광</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EA%B0%81%EC%B2%AD"><img class="c_icon" src="../Image/icon_keqing.png"><p>각청</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%ED%96%A5%EB%A6%89(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_xiangling.png"><p>향릉</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EB%B6%81%EB%91%90(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_beidou.png"><p>북두</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%ED%96%89%EC%B6%94"><img class="c_icon" src="../Image/icon_xingqiu.png"><p>행추</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%B9%98%EC%B9%98(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_qiqi.png"><p>치치</p></a></div>
                 <div></div>
                 <div></div>
                 <div></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_ganyu.png"><p>감우</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_xiao.png"><p>소</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_hutao.png"><p>호두</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_tartaglia.png"><p>타르탈리아</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EA%B0%90%EC%9A%B0"><img class="c_icon" src="../Image/icon_ganyu.png"><p>감우</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%86%8C(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_xiao.png"><p>소</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%ED%98%B8%EB%91%90(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_hutao.png"><p>호두</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%ED%83%80%EB%A5%B4%ED%83%88%EB%A6%AC%EC%95%84(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_tartaglia.png"><p>타르탈리아</p></a></div>
             </div>
         </div>
         <div class="bg" style="padding-bottom: 3%;">
             <h2><img src="../Image/icon_IZ.png" height="40px">이나즈마<img src="../Image/icon_IZ.png" height="40px"></h2>
             <div class="item_character bg_IZ">
                 <div></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_kazuha.png"><p>카즈하</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_ayaka.png"><p>아야카</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_thoma.png"><p>토마</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_sayu.png"><p>사유</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_yoimiya.png"><p>요이미아</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_sara.png"><p>쿠죠 사라</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_shogun.png"><p>라이덴 쇼군</p></a></div>
-                <div class="namecard"><a href="home.html"><img class="c_icon" src="../Image/icon_kokomi.png"><p>코코미</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%B9%B4%EC%97%90%EB%8D%B0%ED%95%98%EB%9D%BC%20%EC%B9%B4%EC%A6%88%ED%95%98"><img class="c_icon" src="../Image/icon_kazuha.png"><p>카즈하</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%B9%B4%EB%AF%B8%EC%82%AC%ED%86%A0%20%EC%95%84%EC%95%BC%EC%B9%B4"><img class="c_icon" src="../Image/icon_ayaka.png"><p>아야카</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%ED%86%A0%EB%A7%88(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_thoma.png"><p>토마</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%82%AC%EC%9C%A0(%EC%9B%90%EC%8B%A0)"><img class="c_icon" src="../Image/icon_sayu.png"><p>사유</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9A%94%EC%9D%B4%EB%AF%B8%EC%95%BC"><img class="c_icon" src="../Image/icon_yoimiya.png"><p>요이미아</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%BF%A0%EC%A3%A0%20%EC%82%AC%EB%9D%BC"><img class="c_icon" src="../Image/icon_sara.png"><p>쿠죠 사라</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EB%9D%BC%EC%9D%B4%EB%8D%B4%20%EC%87%BC%EA%B5%B0"><img class="c_icon" src="../Image/icon_shogun.png"><p>라이덴 쇼군</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%82%B0%EA%B3%A0%EB%85%B8%EB%AF%B8%EC%95%BC%20%EC%BD%94%EC%BD%94%EB%AF%B8"><img class="c_icon" src="../Image/icon_kokomi.png"><p>코코미</p></a></div>
             </div>
         </div>
     </section>
