--- a/HTML/Weapon.html
+++ b/HTML/Weapon.html
@@ -37,50 +37,50 @@
         <div class="bg">
             <h2>한손검(★5)</h2>
             <div class="item_weapon type6" style="background-image: url(../Image/원신\ 등장인물\ -\ 진\ 군힐드\ \(Jean\ Gunnhildr\).png);">
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Aquila Favonia.png"><p>매의 검</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Skyward Blade.png"><p>천공의 검</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Summit Shaper.png"><p>참봉의 칼날</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Primordial Jade Cutter.png"><p>반암결록</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Freedom-Sworn.png"><p>오래된 자유의 서약</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Mistsplitter Reforged.png"><p>안개를 가르는 회광</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%ED%95%9C%EC%86%90%EA%B2%80 #s-2.1"><img class="w_icon" src="../Image/Aquila Favonia.png"><p>매의 검</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%ED%95%9C%EC%86%90%EA%B2%80 #s-2.2"><img class="w_icon" src="../Image/Skyward Blade.png"><p>천공의 검</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%ED%95%9C%EC%86%90%EA%B2%80 #s-2.3"><img class="w_icon" src="../Image/Summit Shaper.png"><p>참봉의 칼날</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%ED%95%9C%EC%86%90%EA%B2%80 #s-2.4"><img class="w_icon" src="../Image/Primordial Jade Cutter.png"><p>반암결록</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%ED%95%9C%EC%86%90%EA%B2%80 #s-2.5"><img class="w_icon" src="../Image/Freedom-Sworn.png"><p>오래된 자유의 서약</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%ED%95%9C%EC%86%90%EA%B2%80 #s-2.6"><img class="w_icon" src="../Image/Mistsplitter Reforged.png"><p>안개를 가르는 회광</p></a></div>
             </div>
         </div>
         <div class="bg">
             <h2>양손검(★5)</h2>
             <div class="item_weapon type4">
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Skyward Pride.png"><p>천공의 긍지</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Wolf's Gravestone.png"><p>늑대의 말로</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/The Unforged.png"><p>무공의 검</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Song of Broken Pines.png"><p>송뢰가 울릴 무렵</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%EC%96%91%EC%86%90%EA%B2%80 #s-2.1"><img class="w_icon" src="../Image/Skyward Pride.png"><p>천공의 긍지</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%EC%96%91%EC%86%90%EA%B2%80 #s-2.2"><img class="w_icon" src="../Image/Wolf's Gravestone.png"><p>늑대의 말로</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%EC%96%91%EC%86%90%EA%B2%80 #s-2.3"><img class="w_icon" src="../Image/The Unforged.png"><p>무공의 검</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%EC%96%91%EC%86%90%EA%B2%80 #s-2.4"><img class="w_icon" src="../Image/Song of Broken Pines.png"><p>송뢰가 울릴 무렵</p></a></div>
             </div>
         </div>
         <div class="bg">
             <h2>장병기(★5)</h2>
             <div class="item_weapon type5">
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Primordial Jade Winged-Spear.png"><p>화박연</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Skyward Spine.png"><p>천공의 마루</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Vortex Vanquisher.png"><p>관홍의 창</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Staff of Homa.png"><p>호마의 지팡이</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Engulfing Lightning.png"><p>예초의 번개</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%EC%9E%A5%EB%B3%91%EA%B8%B0 #s-2.1"><img class="w_icon" src="../Image/Primordial Jade Winged-Spear.png"><p>화박연</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%EC%9E%A5%EB%B3%91%EA%B8%B0 #s-2.2"><img class="w_icon" src="../Image/Skyward Spine.png"><p>천공의 마루</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%EC%9E%A5%EB%B3%91%EA%B8%B0 #s-2.3"><img class="w_icon" src="../Image/Vortex Vanquisher.png"><p>관홍의 창</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%EC%9E%A5%EB%B3%91%EA%B8%B0 #s-2.4"><img class="w_icon" src="../Image/Staff of Homa.png"><p>호마의 지팡이</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%EC%9E%A5%EB%B3%91%EA%B8%B0 #s-2.5"><img class="w_icon" src="../Image/Engulfing Lightning.png"><p>예초의 번개</p></a></div>
             </div>
         </div>
         <div class="bg">
             <h2>활(★5)</h2>
             <div class="item_weapon type5">
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Skyward Harp.png"><p>천공의 날개</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Amos' Bow.png"><p>아모스의 활</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Elegy for the End.png"><p>종말 탄식의 노래</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Thundering Pulse.png"><p>비뢰의 고동</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Brumal Star.png"><p>극지의 별</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%ED%99%9C #s-2.1"><img class="w_icon" src="../Image/Skyward Harp.png"><p>천공의 날개</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%ED%99%9C #s-2.2"><img class="w_icon" src="../Image/Amos' Bow.png"><p>아모스의 활</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%ED%99%9C #s-2.3"><img class="w_icon" src="../Image/Elegy for the End.png"><p>종말 탄식의 노래</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%ED%99%9C #s-2.4"><img class="w_icon" src="../Image/Thundering Pulse.png"><p>비뢰의 고동</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%ED%99%9C #s-2.5"><img class="w_icon" src="../Image/Brumal Star.png"><p>극지의 별</p></a></div>
             </div>
         </div>
         <div class="bg" style="padding-bottom: 3%;">
             <h2>법구(★5)</h2>
             <div class="item_weapon type4">
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Skyward Atlas.png"><p>천공의 두루마리</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Lost Prayer to the Sacred Winds.png"><p>사풍 원서</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Memory of Dust.png"><p>속세의 자물쇠</p></a></div>
-                <div class="namecard"><a href=" "><img class="w_icon" src="../Image/Everlasting Moonglow.png"><p>불멸의 달빛</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%EB%B2%95%EA%B5%AC #s-2.1"><img class="w_icon" src="../Image/Skyward Atlas.png"><p>천공의 두루마리</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%EB%B2%95%EA%B5%AC #s-2.2"><img class="w_icon" src="../Image/Lost Prayer to the Sacred Winds.png"><p>사풍 원서</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%EB%B2%95%EA%B5%AC #s-2.3"><img class="w_icon" src="../Image/Memory of Dust.png"><p>속세의 자물쇠</p></a></div>
+                <div class="namecard"><a href="https://namu.wiki/w/%EC%9B%90%EC%8B%A0/%EB%AC%B4%EA%B8%B0/%EB%B2%95%EA%B5%AC #s-2.4"><img class="w_icon" src="../Image/Everlasting Moonglow.png"><p>불멸의 달빛</p></a></div>
             </div>
         </div>
     </section>
