--- a/HTML/Weapon.html
+++ b/HTML/Weapon.html
@@ -23,7 +23,7 @@
                 </ul>
             </li>
             <li class="menu_d">
-                <div class="main_menu menu4"><a href="../HTML/Information.html" >자료실</a></div>
+                <div class="main_menu menu4"><a href="#">자료실</a></div>
                 <ul class="sub_menu">
                     <li><a href="../HTML/Information.html" >스토리</a></li>
                 </ul>
