최종 수정 및 js 적용

--- a/HTML/Character.html
+++ b/HTML/Character.html
@@ -25,11 +25,11 @@
             <li class="menu_d">
                 <div class="main_menu menu4"><a href="#">자료실</a></div>
                 <ul class="sub_menu">
-                    <li><a href="../HTML/Information.html" >스토리</a></li>
+                    <li><a href="../HTML/Information.html" >대륙정보</a></li>
                 </ul>
             </li>
             <li class="menu_e">
-                <div class="main_menu menu5"><a href="https://genshin.mihoyo.com/ko/home">공식 사이트</a></div>
+                <div class="main_menu menu5"><a href="https://genshin.mihoyo.com/ko/home" onclick="func_confirm()">공식 사이트</a></div>
             </li>
         </ul>
     </header>
